test/langtools/tools/javac/valhalla/lworld-values/CheckFlattenableCycles.out
CheckFlattenableCycles.java:15:34: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles
CheckFlattenableCycles.java:13:38: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles.InnerValue
2 errors
